--- a/examples/line.html
+++ b/examples/line.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <script src="build.js"></script>
+    <script src="../node_modules/vue/dist/vue.js"></script>
+    <script src="../dist/vue-graph.js"></script>
 </head>
 <body>
     <div id="app">
@@ -23,5 +24,16 @@
             </div>
         </div>
     </div>
+    <script>
+        var vm = new Vue({
+            el: "#app",
+            data: {
+                name : "[Simple Dashboard]",
+                labels: [ "1q", "2q", "3q", "4q" ],
+                values: [ [ 10, 40, 30 ], [ -20, 10, 30 ], [ -20, 10, 30 ], [ -20, 10, 30 ] ],
+                title: "Line Test"
+            }
+        });
+    </script>
 </body>
 </html>
