--- a/examples/bar3d.html
+++ b/examples/bar3d.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="charset=utf-8;"/>
+    <script src="../node_modules/vue/dist/vue.js"></script>
+    <script src="../dist/vue-graph.js"></script>
 </head>
 <body>
     <div id="app">
@@ -25,12 +25,22 @@
                 </graph-bar3d>
             </div>
         </div>
-        <br/>
-        <div class="row">
-            <div class="col">
-
-            </div>
-        </div>
     </div>
+    <script>
+        var vm = new Vue({
+            el: "#app",
+            data: {
+                name : "[Simple Dashboard]",
+                labels: [ "1q", "2q", "3q", "4q" ],
+                names: [ "ms", "apple", "google" ],
+                values: [
+                    [ 0, 15, 8, 18 ],
+                    [ 15, 6, 10, 5 ],
+                    [ 20, 20, 20, 20 ]
+                ],
+                title: "Bar Test"
+            }
+        });
+    </script>
 </body>
 </html>
