1. line3d 컴포넌트 추가 2. guildline 위젯 추가 3. rotate3d 위젯 추가 4. tooltip 위젯 추가

--- a/examples/bar.html
+++ b/examples/bar.html
@@ -20,7 +20,8 @@
                         :labels="labels"
                         :values="values"
                 >
-                    <notes :text="title"></notes>
+                    <note :text="title"></note>
+                    <tooltip :names="[ 'MS', 'Apple', 'Google' ]" :position="'left'"></tooltip>
                     <legends :names="[ 'MS', 'Apple', 'Google' ]" :filter="true"></legends>
                 </graph-bar>
             </div>
