--- a/examples/scatter.html
+++ b/examples/scatter.html
@@ -23,7 +23,7 @@
                         :colors="customColors"
                         @click="testtest"
                 >
-                    <notes :text="title" :align="'left'"></notes>
+                    <note :text="title" :align="'left'"></note>
                     <legends :names="[ 'Date', 'Value' ]"></legends>
                 </graph-scatter>
             </div>
