--- a/examples/bar3d.html
+++ b/examples/bar3d.html
@@ -20,7 +20,8 @@
                         :values="values"
                         :names="names"
                 >
-                    <notes :text="title" :align="'left'"></notes>
+                    <note :text="title" :align="'left'"></note>
+                    <tooltip :names="names" :position="'left'"></tooltip>
                     <legends :names="names"></legends>
                 </graph-bar3d>
             </div>
