--- a/examples/line.dateblock.html
+++ b/examples/line.dateblock.html
@@ -21,8 +21,10 @@
                         :labels="labels"
                         :values="values"
                 >
-                    <notes :text="title"></notes>
-                    <legends :names="[ 'MS', 'Apple', 'Google' ]"></legends>
+                    <note :text="title"></note>
+                    <legends :names="names"></legends>
+                    <tooltip :names="names" :position="'right'"></tooltip>
+                    <guideline :tooltip-x="true" :tooltip-y="true"></guideline>
                 </graph-line-dateblock>
             </div>
         </div>
@@ -38,6 +40,7 @@
                     [ 40, 10, 10, 10 ],
                     [ 30, 25, 35, 30 ]
                 ],
+                names: [ 'MS', 'Apple', 'Google' ],
                 title: "Line Test"
             }
         });
