--- a/examples/bubble.html
+++ b/examples/bubble.html
@@ -5,36 +5,30 @@
 </head>
 <body>
     <div id="app">
-        <div class="title">{{ name }}</div>
-        <div class="row">
-            <div class="col">
-                <graph-bubble
-                        :width="600"
-                        :height="400"
-                        :shape="'normal'"
-                        :axis-min="0"
-                        :axis-max="50"
-                        :axis-interval="3600000"
-                        :axis-format="'HH'"
-                        :labels="labels"
-                        :values="values"
-                        :display="'max'"
-                        :active-event="'click'"
-                        :show-text="true"
-                        :colors="customColors"
-                        @click="testtest"
-                >
-                    <note :text="title" :align="'left'"></note>
-                    <legends :names="[ 'Date', 'Value' ]"></legends>
-                </graph-bubble>
-            </div>
-        </div>
+        <graph-bubble
+                :width="600"
+                :height="400"
+                :shape="'normal'"
+                :axis-min="0"
+                :axis-max="50"
+                :axis-interval="3600000"
+                :axis-format="'HH'"
+                :labels="labels"
+                :values="values"
+                :display="'max'"
+                :active-event="'click'"
+                :show-text="true"
+                :colors="customColors"
+                @click="clickTest">
+            <note :text="title" :align="'left'"></note>
+            <legends :names="[ 'Date', 'Value' ]"></legends>
+        </graph-bubble>
     </div>
     <script>
         var vm = new Vue({
             el: "#app",
             data: {
-                name : "[Simple Dashboard]",
+                title: "Bubble Chart",
                 labels: [ new Date('2018-07-09 00:00:00'), new Date('2018-07-10 00:00:00') ],
                 values: [
                     [ new Date('2018-07-09 05:23:00'), 20 ],
@@ -42,14 +36,14 @@
                     [ new Date('2018-07-09 15:55:00'), 12 ],
                     [ new Date('2018-07-09 19:01:00'), 30 ]
                 ]
-                ,
-                title: "Line Test"
             },
             methods: {
-                testtest: function(obj, e) {
-                    console.log(obj)
+                clickTest: function() {
+                    console.log("Click Event", arguments);
+                    alert("click");
                 },
                 customColors: function(data, index) {
+                    console.log("Custom Colors", data);
                     if(data[1] > 15) return "red";
                     return "blue";
                 }
