--- a/src/bundles/app.html
+++ b/src/bundles/app.html
@@ -5,25 +5,23 @@
 </head>
 <body>
     <div id="app">
-        <graph-area
-                :width="800"
+        <graph-stackbar
+                :width="600"
                 :height="400"
-                :axis-min="0"
-                :axis-max="100"
-                :shape="'normal'"
+                :shape="'curve'"
+                :axis-reverse="false"
                 :axis-x-style="'gradient'"
                 :axis-y-style="'solid'"
                 :labels="labels"
                 :values="values"
-                :opacity="0.6"
-                :borderline="true"
-                :styles="css"
-                :theme="'dark'"
+                :names="names"
+                :full-mode="true"
+                :show-text="true"
         >
             <note :text="title"></note>
-            <legends :names="[ 'MS', 'Apple', 'Google' ]"></legends>
-            <guideline :tooltip-y="true"></guideline>
-        </graph-area>
+            <legends :names="names"></legends>
+            <tooltip :names="names" :position="'right'"></tooltip>
+        </graph-stackbar>
     </div>
 </body>
 </html>
