--- a/examples/bubble.html
+++ b/examples/bubble.html
@@ -8,10 +8,9 @@
         <graph-bubble
                 :width="600"
                 :height="400"
-                :shape="'normal'"
                 :axis-min="0"
                 :axis-max="50"
-                :axis-interval="3600000"
+                :axis-interval="1000 * 60 * 60"
                 :axis-format="'HH'"
                 :labels="labels"
                 :values="values"
