--- a/examples/line-reverse.html
+++ b/examples/line-reverse.html
@@ -5,26 +5,30 @@
 </head>
 <body>
     <div id="app">
-        <graph-area
-                :width="800"
+        <graph-line
+                :width="600"
                 :height="400"
+                :shape="'curve'"
+                :axis-min="0"
+                :axis-max="50"
+                :axis-reverse="true"
                 :axis-full-mode="true"
                 :labels="labels"
-                :values="values"
-                :shape="'normal'"
-                :opacity="0.6"
-                :borderline="true">
+                :names="names"
+                :values="values">
             <note :text="title"></note>
-            <legends :names="[ 'MS', 'Apple', 'Google' ]"></legends>
+            <tooltip :names="names" :position="'right'"></tooltip>
+            <legends :names="names"></legends>
             <guideline :tooltip-y="true"></guideline>
-        </graph-area>
+        </graph-line>
     </div>
     <script>
         var vm = new Vue({
             el: "#app",
             data: {
-                title: "Area Chart",
+                title: "Line Chart",
                 labels: [ "1Q", "2Q", "3Q", "4Q" ],
+                names: [ 'MS', 'Apple', 'Google' ],
                 values: [
                     [ 10, 5, 5, 5 ],
                     [ 40, 10, 10, 10 ],
