--- a/examples/line.html
+++ b/examples/line.html
@@ -8,12 +8,9 @@
         <graph-line
                 :width="600"
                 :height="400"
-                :shape="'curve'"
+                :shape="'normal'"
                 :axis-min="0"
                 :axis-max="50"
-                :axis-reverse="false"
-                :axis-x-style="'gradient'"
-                :axis-y-style="'solid'"
                 :axis-full-mode="true"
                 :labels="labels"
                 :names="names"
