--- a/examples/stackbar_fullmode.html
+++ b/examples/stackbar_fullmode.html
@@ -8,13 +8,12 @@
         <graph-stackbar
                 :width="600"
                 :height="400"
-                :labels="labels"
-                :names="names"
-                :values="values"
+                :labels="[ '1Q', '2Q', '3Q', '4Q' ]"
                 :full-mode="true"
                 :show-text="true"
-        >
-            <note :text="title"></note>
+                :names="names"
+                :values="values">
+            <note :text="'StackBar Chart'"></note>
             <legends :names="names"></legends>
             <tooltip :names="names" :position="'right'"></tooltip>
         </graph-stackbar>
@@ -23,8 +22,6 @@
         var vm = new Vue({
             el: "#app",
             data: {
-                title: "StackBar Chart",
-                labels: [ "1Q", "2Q", "3Q", "4Q" ],
                 names: [ 'MS', 'Apple', 'Google' ],
                 values: [
                     [ 10, 5, 5, 5 ],
