--- a/examples/bubble.html
+++ b/examples/bubble.html
@@ -12,14 +12,14 @@
                 :axis-max="50"
                 :axis-interval="1000 * 60 * 60"
                 :axis-format="'HH'"
-                :labels="labels"
-                :values="values"
                 :display="'max'"
                 :active-event="'click'"
                 :show-text="true"
+                :labels="labels"
+                :values="values"
                 :colors="customColors"
                 @click="clickTest">
-            <note :text="title" :align="'left'"></note>
+            <note :text="'Bubble Chart'" :align="'left'"></note>
             <legends :names="[ 'Date', 'Value' ]"></legends>
         </graph-bubble>
     </div>
@@ -27,7 +27,6 @@
         var vm = new Vue({
             el: "#app",
             data: {
-                title: "Bubble Chart",
                 labels: [ new Date('2018-07-09 00:00:00'), new Date('2018-07-10 00:00:00') ],
                 values: [
                     [ new Date('2018-07-09 05:23:00'), 20 ],
