Official release ready.

--- a/examples/stackbar.html
+++ b/examples/stackbar.html
@@ -12,8 +12,7 @@
                 :full-mode="false"
                 :show-text="true"
                 :names="names"
-                :values="values"
-        >
+                :values="values">
             <note :text="'StackBar Chart'"></note>
             <legends :names="names"></legends>
             <tooltip :names="names" :position="'right'"></tooltip>
