Official release ready.  - Example page changed.

--- a/examples/bubble.html
+++ b/examples/bubble.html
@@ -4,49 +4,36 @@
     <script src="../dist/vue-graph.js"></script>
 </head>
 <body>
-    <div id="app">
-        <graph-bubble
-                :width="600"
-                :height="400"
-                :axis-min="0"
-                :axis-max="50"
-                :axis-interval="1000 * 60 * 60"
-                :axis-format="'HH'"
-                :display="'max'"
-                :active-event="'click'"
-                :show-text="true"
-                :labels="labels"
-                :values="values"
-                :colors="customColors"
-                @click="clickTest">
-            <note :text="'Bubble Chart'" :align="'left'"></note>
-            <legends :names="[ 'Date', 'Value' ]"></legends>
-        </graph-bubble>
-    </div>
-    <script>
-        var vm = new Vue({
-            el: "#app",
-            data: {
-                labels: [ new Date('2018-07-09 00:00:00'), new Date('2018-07-10 00:00:00') ],
-                values: [
-                    [ new Date('2018-07-09 05:23:00'), 20 ],
-                    [ new Date('2018-07-09 12:00:00'), 15 ],
-                    [ new Date('2018-07-09 15:55:00'), 12 ],
-                    [ new Date('2018-07-09 19:01:00'), 30 ]
-                ]
-            },
-            methods: {
-                clickTest: function() {
-                    console.log("Click Event", arguments);
-                    alert("click");
-                },
-                customColors: function(data, index) {
-                    console.log("Custom Colors", data);
-                    if(data[1] > 15) return "red";
-                    return "blue";
-                }
-            }
-        });
-    </script>
+<div id="app">
+    <graph-bubble
+            :width="600"
+            :height="400"
+            :axis-min="0"
+            :axis-max="50"
+            :axis-interval="1000 * 60 * 60"
+            :axis-format="'HH'"
+            :display="'max'"
+            :active-event="'click'"
+            :show-text="true"
+            :labels="labels"
+            :values="values">
+        <note :text="'Bubble Chart'" :align="'left'"></note>
+        <legends :names="[ 'Date', 'Value' ]"></legends>
+    </graph-bubble>
+</div>
+<script>
+var vm = new Vue({
+    el: "#app",
+    data: {
+        labels: [ new Date('2018-07-09 00:00:00'), new Date('2018-07-10 00:00:00') ],
+        values: [
+            [ new Date('2018-07-09 05:23:00'), 20 ],
+            [ new Date('2018-07-09 12:00:00'), 15 ],
+            [ new Date('2018-07-09 15:55:00'), 12 ],
+            [ new Date('2018-07-09 19:01:00'), 30 ]
+        ]
+    }
+});
+</script>
 </body>
 </html>
