--- a/examples/scatter.html
+++ b/examples/scatter.html
@@ -4,52 +4,41 @@
     <script src="../dist/vue-graph.js"></script>
 </head>
 <body>
-    <div id="app">
-        <div class="title">{{ name }}</div>
-        <div class="row">
-            <div class="col">
-                <graph-scatter
-                        :width="600"
-                        :height="400"
-                        :shape="'cross'"
-                        :axis-min="0"
-                        :axis-max="50"
-                        :axis-interval="3600000"
-                        :axis-format="'HH'"
-                        :display="'max'"
-                        :active-event="'click'"
-                        :labels="labels"
-                        :values="values"
-                        :colors="customColors"
-                        @click="clickTest">
-                    <note :text="'Scatter Chart'" :align="'left'"></note>
-                    <legends :names="[ 'Date', 'Value' ]"></legends>
-                </graph-scatter>
-            </div>
+<div id="app">
+    <div class="title">{{ name }}</div>
+    <div class="row">
+        <div class="col">
+            <graph-scatter
+                    :width="600"
+                    :height="400"
+                    :shape="'cross'"
+                    :axis-min="0"
+                    :axis-max="50"
+                    :axis-interval="3600000"
+                    :axis-format="'HH'"
+                    :display="'max'"
+                    :active-event="'click'"
+                    :labels="labels"
+                    :values="values">
+                <note :text="'Scatter Chart'" :align="'left'"></note>
+                <legends :names="[ 'Date', 'Value' ]"></legends>
+            </graph-scatter>
         </div>
     </div>
-    <script>
-        var vm = new Vue({
-            el: "#app",
-            data: {
-                labels: [ new Date('2018-07-09 00:00:00'), new Date('2018-07-10 00:00:00') ],
-                values: [
-                    [ new Date('2018-07-09 05:23:00'), 20 ],
-                    [ new Date('2018-07-09 12:00:00'), 15 ],
-                    [ new Date('2018-07-09 15:55:00'), 12 ],
-                    [ new Date('2018-07-09 19:01:00'), 30 ]
-                ]
-            },
-            methods: {
-                clickTest: function() {
-                    console.log("Click Event", arguments);
-                    alert("click");
-                },
-                customColors: function(data, index) {
-                    return [ "red", 1, 2, 3, 4, 5 ];
-                }
-            }
-        });
-    </script>
+</div>
+<script>
+var vm = new Vue({
+    el: "#app",
+    data: {
+        labels: [ new Date('2018-07-09 00:00:00'), new Date('2018-07-10 00:00:00') ],
+        values: [
+            [ new Date('2018-07-09 05:23:00'), 20 ],
+            [ new Date('2018-07-09 12:00:00'), 15 ],
+            [ new Date('2018-07-09 15:55:00'), 12 ],
+            [ new Date('2018-07-09 19:01:00'), 30 ]
+        ]
+    }
+});
+</script>
 </body>
 </html>
