--- a/examples/area.html
+++ b/examples/area.html
@@ -11,7 +11,7 @@
             :axis-full-mode="true"
             :shape="'normal'"
             :opacity="0.6"
-            :borderline="true"
+            :border-line="true"
             :labels="[ '1Q', '2Q', '3Q', '4Q' ]"
             :values="values">
         <note :text="'Area Chart'"></note>
